--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@ button {
 }
 
 button:hover {
-    background: #0056b3;
+    background: pink;
 }
 
 .demo-2 {
@@ -903,10 +903,11 @@ button svg {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: transparent:
     border-radius: 15px;
 }
 
-.setting-button {
+.open-setting-button {
     background-image: url('img/settings.svg');
     background-repeat: no-repeat;
     background-size: cover;
