--- a/assets/style.css
+++ b/assets/style.css
@@ -45,7 +45,7 @@ body {
 
 .container {
     background: white;
-    background-color: #3e3d3de0;
+    background-color: #3e3d3d91;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -70,7 +70,7 @@ button {
 }
 
 button:hover {
-    background: pink;
+    background: #0056b3;
 }
 
 .demo-2 {
@@ -250,43 +250,43 @@ a:focus {
 /* Shorthand grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end */
 
 .pos-1 {
-    grid-area: 9 / 3 / 23 / 9;
+    grid-area: 9 / 1 / 25 / 9;
 }
 
 .pos-2 {
-    grid-area: 6 / 20 / 17 / 27;
+    grid-area:11 / 19 / 22 / 28;
 }
 
 .pos-3 {
-    grid-area: 7 / 37 / 20 / 43;
+    grid-area: 5 / 37 / 20 / 43;
 }
 
 .pos-4 {
-    grid-area: 13 / 10 / 32 / 17;
+    grid-area: 13 / 11 / 32 / 18;
 }
 
 .pos-5 {
-    grid-area: 20 / 30 / 35 / 36;
+    grid-area: 21 / 30 / 36 / 37;
 }
 
 .pos-6 {
-    grid-area: 12 / 45 / 28 / 50;
+    grid-area: 12 / 45 / 28 / 54;
 }
 
 .pos-7 {
-    grid-area: 28 / 2 / 51 / 9;
+    grid-area: 28 / 1 / 51 / 9;
 }
 
 .pos-8 {
-    grid-area: 37 / 14 / 50 / 22;
+    grid-area: 36 / 14 / 50 / 23;
 }
 
 .pos-9 {
-    grid-area: 40 / 26 / 51 / 32;
+    grid-area: 40 / 26 / 52 / 35;
 }
 
 .pos-10 {
-    grid-area: 37 / 39 / 48 / 47;
+    grid-area: 37 / 39 / 50 / 49;
 }
 
 .content__title {
@@ -900,13 +900,18 @@ button svg {
     position: absolute;
     height: 25px;
     width: 25px;
+    border: 0px;
+    border-radius: 15px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-color: transparent:
-    border-radius: 15px;
 }
 
+.close-button-setting:hover
+{
+    box-shadow: 0 0 10px pink;
+}
 .open-setting-button {
     background-image: url('img/settings.svg');
     background-repeat: no-repeat;
