--- a/assets/style.css
+++ b/assets/style.css
@@ -660,7 +660,7 @@ button svg {
     --primary: hsl(var(--hue), 90%, 50%);
     --trans-dur: 0.6s;
     --trans-timing: cubic-bezier(0.65, 0, 0.35, 1);
-    font-size: calc(8px + (60 - 40) * (100vw - 320px) / (2560 - 320));
+    font-size: calc(8px + (50 - 40) * (100vw - 320px) / (2560 - 320));
 }
 
 .switch,
@@ -888,7 +888,7 @@ button svg {
 }
 
 #setting-container p {
-    font-size: 18pt;
+    font-size: 22pt;
     margin: 0;
 }
 
@@ -908,10 +908,10 @@ button svg {
     background-color: transparent:
 }
 
-.close-button-setting:hover
-{
+.close-button-setting:hover {
     box-shadow: 0 0 10px pink;
 }
+
 .open-setting-button {
     background-image: url('img/settings.svg');
     background-repeat: no-repeat;
